--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-./*.sln
+./DemoCoworkProject.sln
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
